--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
   "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "cross-env": "^3.2.3",
     "flot": "^0.8.0-alpha",
-    "gulp": "2.2.0",
-    "gulp-notify": "^2.2.0",
-    "jquery": "^2.1.4",
-    "laravel-elixir": "^2.0.0",
-    "laravel-elixir-livereload": "0.0.3",
-    "simplemde": "^1.11.2"
+    "jquery": "^3.4.1",
+    "laravel-mix": "^5.0.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^7.2.0",
+    "node-sass": "^4.0.0",
+    "simplemde": "^1.11.2",
+    "vue-template-compiler": "^2.6.11"
   }
 }
