--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "browserify": "^16.5.2",
     "cross-env": "^3.2.3",
     "flot": "^0.8.0-alpha",
+    "fs": "0.0.1-security",
+    "fullcalendar": "^3.10.2",
     "jquery": "^3.4.1",
     "laravel-mix": "^5.0.0",
+    "moment": "^2.27.0",
+    "node-sass": "^4.0.0",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.2.0",
-    "node-sass": "^4.0.0",
     "simplemde": "^1.11.2",
     "vue-template-compiler": "^2.6.11"
   }
