install DomPDF + add invoices overview + download invoice

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.3",
         "bugsnag/bugsnag-laravel": "^2.0",
+        "dompdf/dompdf": "^2.0",
         "graham-campbell/markdown": "^7.1",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
