--- a/composer.json
+++ b/composer.json
@@ -5,24 +5,27 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "barryvdh/laravel-debugbar": "^2.3",
+        "php": "^7.1.3",
+        "barryvdh/laravel-debugbar": "^3.2",
         "bugsnag/bugsnag-laravel": "^2.0",
         "dompdf/dompdf": "^2.0",
-        "graham-campbell/markdown": "^7.1",
-        "guzzlehttp/guzzle": "^6.2",
-        "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4",
+        "graham-campbell/markdown": "^11.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "5.8.*",
+        "laravel/helpers": "^1.0",
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.8",
         "predis/predis": "^1.1",
         "riari/laravel-forum": "^4.1",
         "riari/laravel-forum-frontend": "^1.1",
-        "webuni/commonmark-table-extension": "^0.6.1"
+        "webuni/commonmark-table-extension": "^2.1"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "beyondcode/laravel-dump-server": "^1.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^7.5"
     },
     "autoload": {
         "classmap": [
@@ -49,12 +52,14 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
